--- a/html/userEmailModal.html
+++ b/html/userEmailModal.html
@@ -46,7 +46,7 @@
                                 <div class="form-group row mb-1">
                                     <div class="col text-right">
                                         <button class="btn btn-info btn-xs" type="button"
-                                            onclick="previewEmail($('.primaryEmail'));"><i
+                                            onclick="module.previewEmail($('.primaryEmail'));"><i
                                                 class="fa-eye fa-regular mr-1"></i>Preview</button>
                                     </div>
                                 </div>
@@ -126,7 +126,7 @@
                                     <div class="form-group row mb-1">
                                         <div class="col text-right">
                                             <button class="btn btn-info btn-xs" type="button"
-                                                onclick="previewEmail($('.reminderEmail'));"><i
+                                                onclick="module.previewEmail($('.reminderEmail'));"><i
                                                     class="fa-eye fa-regular mr-1"></i>Preview</button>
                                         </div>
                                     </div>
@@ -162,7 +162,7 @@
             <div class=" modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal"
                     data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="sendEmailAlerts();">Send Alerts</button>
+                <button type="button" class="btn btn-primary" onclick="module.sendEmailAlerts();">Send Alerts</button>
             </div>
         </div>
     </div>
