--- a/html/userExpirationModal.html
+++ b/html/userExpirationModal.html
@@ -106,7 +106,7 @@
                                     <div class="form-group row mb-1">
                                         <div class="col text-right">
                                             <button class="btn btn-info btn-xs" type="button"
-                                                onclick="previewEmail($('#userExpirationForm .userNotification'));"><i
+                                                onclick="module.previewEmail($('#userExpirationForm .userNotification'));"><i
                                                     class="fa-eye fa-regular mr-1"></i>Preview</button>
                                         </div>
                                     </div>
@@ -197,7 +197,7 @@
                                     <div class="form-group row mb-1">
                                         <div class="col text-right">
                                             <button class="btn btn-info btn-xs" type="button"
-                                                onclick="previewEmailUserRightsHolders($('#userExpirationForm .userRightsHoldersNotification'));"><i
+                                                onclick="module.previewEmailUserRightsHolders($('#userExpirationForm .userRightsHoldersNotification'));"><i
                                                     class="fa-eye fa-regular mr-1"></i>Preview</button>
                                         </div>
                                     </div>
@@ -259,7 +259,8 @@
             <div class=" modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal"
                     data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" onclick="expireUsersAndSendAlerts();">Expire Users</button>
+                <button type="button" class="btn btn-danger" onclick="module.expireUsersAndSendAlerts();">Expire
+                    Users</button>
             </div>
         </div>
     </div>
