slight perf imp

--- a/html/system-settings-sags.html
+++ b/html/system-settings-sags.html
@@ -14,22 +14,22 @@
         <div class="dropdown">
             <button type="button" class="btn btn-primary btn-xs dropdown-toggle mr-2" data-toggle="dropdown"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa-sharp fa-file-excel"></i>
+                <i class="fa-solid fa-file-excel"></i>
                 <span>Import or Export SAGs</span>
                 <span class="sr-only">Toggle Dropdown</span>
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" onclick="module.exportRawCsv();"><i
-                            class="fa-sharp fa-regular fa-file-arrow-down fa-fw mr-1 text-info"></i>Export SAGs
+                            class=" fa-regular fa-file-arrow-down fa-fw mr-1 text-info"></i>Export SAGs
                         (raw)</a></li>
                 <li><a class="dropdown-item" onclick="module.exportCsv();"><i
-                            class="fa-sharp fa-regular fa-file-arrow-down fa-fw mr-1 text-success"></i>Export SAGs
+                            class=" fa-regular fa-file-arrow-down fa-fw mr-1 text-success"></i>Export SAGs
                         (labels)</a></li>
                 <li><a class="dropdown-item" onclick="module.importCsv();"><i
-                            class="fa-sharp fa-solid fa-file-arrow-up fa-fw mr-1 text-danger"></i>Import SAGs</a>
+                            class=" fa-solid fa-file-arrow-up fa-fw mr-1 text-danger"></i>Import SAGs</a>
                 </li>
                 <li><a class="dropdown-item" onclick="module.exportRawCsv(false);"><i
-                            class="fa-sharp fa-solid fa-download fa-fw mr-1 text-primary"></i>Download Import
+                            class=" fa-solid fa-download fa-fw mr-1 text-primary"></i>Download Import
                         Template</a></li>
             </ul>
         </div>
@@ -47,7 +47,7 @@
         <div class="col ml-1 px-0 justify-content-start">
             <button class="btn btn-success btn-sm" id="addSagButton" onclick="module.addNewSag();"
                 title="Add a New Security Access Group">
-                <i class="fa-kit fa-solid-tag-circle-plus fa-fw"></i>
+                <i class="fa-solid fa-tag fa-fw"></i>
                 <span>Create SAG</span>
             </button>
         </div>
