--- a/html/system-settings-userlist.html
+++ b/html/system-settings-userlist.html
@@ -38,25 +38,25 @@
         <div class="d-flex">
             <button class="btn btn-danger btn-xs mr-1 editUsersButton" style="width: 8em;" data-editing="false"
                 onclick="module.toggleEditMode(event);">
-                <i class="fa-sharp fa-user-pen"></i>
+                <i class="fa-solid fa-user-pen"></i>
                 <span>Edit Users</span>
             </button>
             <div class="d-flex dropdown">
                 <button type="button" class="btn btn-primary btn-xs dropdown-toggle mr-2" data-toggle="dropdown"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="fa-sharp fa-file-excel mr-1"></i>
+                    <i class="fa-solid fa-file-excel mr-1"></i>
                     <span>Import or Export User Assignments</span>
                     <span class="sr-only">Toggle Dropdown</span>
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" onclick="module.handleCsvExport();"><i
-                                class="fa-sharp fa-regular fa-file-arrow-down fa-fw mr-1 text-success">
+                                class="fa-regular fa-file-arrow-down fa-fw mr-1 text-success">
                             </i>Export User Assignments</a></li>
                     <li><a class="dropdown-item" onclick="module.importCsv();"><i
-                                class="fa-sharp fa-solid fa-file-arrow-up fa-fw mr-1 text-danger"></i>Import User
+                                class="fa-solid fa-file-arrow-up fa-fw mr-1 text-danger"></i>Import User
                             Assignments</a></li>
                     <li><a class="dropdown-item" onclick="module.downloadTemplate();"><i
-                                class="fa-sharp fa-solid fa-download fa-fw mr-1 text-primary"></i>Download Import
+                                class="fa-solid fa-download fa-fw mr-1 text-primary"></i>Download Import
                             Template</a></li>
                 </ul>
             </div>
