--- a/html/userRightsHoldersEmailModal.html
+++ b/html/userRightsHoldersEmailModal.html
@@ -52,7 +52,7 @@
                                         <div class="form-group row mb-1">
                                             <div class="col text-right">
                                                 <button class="btn btn-info btn-xs" type="button"
-                                                    onclick="module.previewEmailUserRightsHolders($('.primaryEmail-UserRightsHolders'));"><i
+                                                    onclick="sag_module.previewEmailUserRightsHolders($('.primaryEmail-UserRightsHolders'));"><i
                                                         class="fa-eye fa-regular mr-1"></i>Preview</button>
                                             </div>
                                         </div>
@@ -142,7 +142,7 @@
                                             <div class="form-group row mb-1">
                                                 <div class="col text-right">
                                                     <button class="btn btn-info btn-xs" type="button"
-                                                        onclick="module.previewEmailUserRightsHolders($('.reminderEmail-UserRightsHolders'));"><i
+                                                        onclick="sag_module.previewEmailUserRightsHolders($('.reminderEmail-UserRightsHolders'));"><i
                                                             class="fa-eye fa-regular mr-1"></i>Preview</button>
                                                 </div>
                                             </div>
@@ -211,7 +211,8 @@
             <div class=" modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal"
                     data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-warning" onclick="module.sendEmailAlerts_UserRightsHolders();">Send
+                <button type="button" class="btn btn-warning"
+                    onclick="sag_module.sendEmailAlerts_UserRightsHolders();">Send
                     Alerts</button>
             </div>
         </div>
