--- a/html/system-settings-userlist.html
+++ b/html/system-settings-userlist.html
@@ -63,7 +63,7 @@
 
         </div>
     </div>
-    <table aria-label='Users Table' id='SUR-System-Table' class="compact cell-border border">
+    <table aria-label='Users Table' id='SAG-System-Table' class="compact cell-border border">
         <thead>
             <tr>
                 <th data-id="username" class="py-3">Username</th>
