--- a/README.html
+++ b/README.html
@@ -680,7 +680,7 @@ The module must be enabled in a project for it to restrict User Rights in that p
 </tr>
 </table>
 </div>
-<table id="config_options" class="tableblock frame-all grid-all stripes-odd stretch">
+<table id="config_options" class="tableblock frame-all grid-all stripes-even stretch">
 <caption class="title">Table 1. EM Framework Management Config Options</caption>
 <colgroup>
 <col style="width: 14.2857%;">
@@ -799,7 +799,7 @@ The module must be enabled in a project for it to restrict User Rights in that p
 <div class="paragraph">
 <p>The file used to import user assignments must be a CSV file with the following columns:</p>
 </div>
-<table class="tableblock frame-all grid-all stripes-odd stretch">
+<table class="tableblock frame-all grid-all stripes-even stretch">
 <colgroup>
 <col style="width: 33.3333%;">
 <col style="width: 66.6667%;">
@@ -884,7 +884,7 @@ You can also <strong>Copy</strong> and <strong>Delete</strong> the SAG from the 
 <div class="paragraph">
 <p>The file used to import SAGs must be a CSV file with the following columns:</p>
 </div>
-<table class="tableblock frame-all grid-all stripes-odd stretch">
+<table class="tableblock frame-all grid-all stripes-even stretch">
 <colgroup>
 <col style="width: 12.5%;">
 <col style="width: 37.5%;">
@@ -1491,7 +1491,7 @@ You can also <strong>Copy</strong> and <strong>Delete</strong> the SAG from the 
 <div class="paragraph">
 <p>The report options are as follows:</p>
 </div>
-<table id="reports_table" class="tableblock frame-all grid-all stripes-odd stretch">
+<table id="reports_table" class="tableblock frame-all grid-all stripes-even stretch">
 <colgroup>
 <col style="width: 25%;">
 <col style="width: 75%;">
@@ -1628,7 +1628,7 @@ If there are any users that are non-compliant with their SAG, you can use one of
 <div class="paragraph">
 <p>The following placeholders can be used in the email subject and body fields in alerts:</p>
 </div>
-<table class="tableblock frame-all grid-all stripes-odd stretch">
+<table class="tableblock frame-all grid-all stripes-even stretch">
 <colgroup>
 <col style="width: 28.5714%;">
 <col style="width: 14.2857%;">
@@ -1856,7 +1856,7 @@ Scheduled reminders can be canceled from this tab.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-07-29 11:18:42 -0400
+Last updated 2023-07-29 11:21:03 -0400
 </div>
 </div>
 </body>
