--- a/html/userEmailModal.html
+++ b/html/userEmailModal.html
@@ -3,7 +3,7 @@
     <div class="modal-lg modal-dialog modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header bg-primary text-light">
-                <h5 class="modal-title" id="emailUsersTitle">Alert Project Users</h5>
+                <h5 class="modal-title" id="emailUsersTitle">{{status_ui_7}}</h5>
                 <button type="button" class="btn-close btn-primary align-self-center" data-bs-dismiss="modal"
                     data-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -14,10 +14,10 @@
                             <div class="border bg-light pt-4 px-4 pb-2">
                                 <div class="form-group row">
                                     <label for="displayFromName"
-                                        class="col-sm-3 col-form-label col-form-label-sm">From:</label>
+                                        class="col-sm-3 col-form-label col-form-label-sm">{{status_ui_77}}</label>
                                     <div class="col-sm-4">
                                         <input id="displayFromName" name="displayFromName" type="text"
-                                            class="form-control form-control-sm" placeholder="Display name (optional)">
+                                            class="form-control form-control-sm" placeholder="{{status_ui_78}}">
                                     </div>
                                     <div class="col-sm-5 pl-0">
                                         <select id="fromEmail" name="fromEmail" class="form-control form-control-sm">
@@ -27,27 +27,27 @@
                                 </div>
                                 <div class="form-group row">
                                     <label for="emailSubject"
-                                        class="col-sm-3 col-form-label col-form-label-sm">Subject:</label>
+                                        class="col-sm-3 col-form-label col-form-label-sm">{{status_ui_79}}</label>
                                     <div class="col-sm-9">
                                         <input id="emailSubject" name="emailSubject" type="text"
                                             class="form-control form-control-sm" required aria-required="true">
-                                        <div class="invalid-feedback">You must provide a subject for the email</div>
+                                        <div class="invalid-feedback">{{status_ui_80}}</div>
                                     </div>
                                 </div>
                                 <div class="form-group row mb-1">
                                     <div class="col">
-                                        <label for="emailBody" class="col-form-label col-form-label-sm">Email
-                                            Body:</label>
+                                        <label for="emailBody"
+                                            class="col-form-label col-form-label-sm">{{status_ui_81}}</label>
                                         <textarea id="emailBody" name="emailBody" type="text"
                                             class="form-control form-control-sm richtext emailBody"></textarea>
-                                        <div class="invalid-feedback">You must provide a body for the email</div>
+                                        <div class="invalid-feedback">{{status_us_82}}</div>
                                     </div>
                                 </div>
                                 <div class="form-group row mb-1">
                                     <div class="col text-right">
                                         <button class="btn btn-info btn-xs" type="button"
                                             onclick="sag_module.previewEmail($('.primaryEmail'));"><i
-                                                class="fa-eye fa-regular mr-1"></i>Preview</button>
+                                                class="fa-eye fa-regular mr-1"></i>{{status_ui_83}}</button>
                                     </div>
                                 </div>
                                 <div class="form-group row mb-0" style="font-size: small;">
@@ -55,21 +55,19 @@
                                         <table aria-label="placeholders">
                                             <thead>
                                                 <tr>
-                                                    <th colspan=2><span><strong>You can use the following placeholders
-                                                                to insert information into
-                                                                your email subject and body:</strong></span></th>
+                                                    <th colspan=2><span><strong>{{status_ui_84}}</strong></span></th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 {{PLACEHOLDERS}}
                                             </tbody>
                                         </table>
-                                        <p><span>You can also use <button
+                                        <p><span>{{status_ui_85}} <button
                                                     class="btn btn-xs btn-rcgreen btn-rcgreen-light"
                                                     style="margin-left:3px;font-size:11px;padding:0 3px 1px;line-height:14px;"
                                                     onclick="smartVariableExplainPopup();setTimeout(function() {$('#smart_variable_explain_popup').parent().css('z-index', 1061);},300); return false;">[<i
-                                                        class="fa-solid fa-bolt fa-xs" style="margin:0 1px;"></i>] Smart
-                                                    Variables</button></span></p>
+                                                        class="fa-solid fa-bolt fa-xs" style="margin:0 1px;"></i>]
+                                                    {{status_ui_86}}</button></span></p>
                                     </div>
                                 </div>
                             </div>
@@ -79,55 +77,51 @@
                         <div class="col">
                             <div class="border bg-reminder p-4">
                                 <div class="form-group row mb-0">
-                                    <label class="col-sm-3 col-form-label col-form-label-sm">Send Reminder?</label>
+                                    <label class="col-sm-3 col-form-label col-form-label-sm">{{status_ui_87}}</label>
                                     <div class="col-sm-9">
                                         <div class="form-check">
                                             <input id="sendReminder" name="sendReminder" type="checkbox"
                                                 class="form-check-input" value="1" data-toggle="collapse"
                                                 data-target="#reminderInfo" aria-expanded="false"
                                                 aria-controls="reminderInfo">
-                                            <label class="form-check-label" for="sendReminder">Yes, send a
-                                                reminder</label>
+                                            <label class="form-check-label" for="sendReminder">{{status_ui_88}}</label>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="collapse mt-2" id="reminderInfo">
                                     <div class="form-group row">
-                                        <label for="delayDays" class="col-sm-3 col-form-label col-form-label-sm">How
-                                            many days until the reminder is sent?</label>
+                                        <label for="delayDays"
+                                            class="col-sm-3 col-form-label col-form-label-sm">{{status_ui_89}}</label>
                                         <div class="col-sm-9 mt-2">
                                             <input id="delayDays" name="delayDays" type="number" min="1" value="14"
                                                 class="form-control form-control-sm" required aria-required="true">
-                                            <div class="invalid-feedback">You must provide a number of days greater than
-                                                1</div>
+                                            <div class="invalid-feedback">{{status_ui_90}}</div>
                                         </div>
                                     </div>
                                     <hr>
                                     <div class="form-group row">
                                         <label for="reminderSubject"
-                                            class="col-sm-3 col-form-label col-form-label-sm">Reminder Subject:</label>
+                                            class="col-sm-3 col-form-label col-form-label-sm">{{status_ui_91}}</label>
                                         <div class="col-sm-9">
                                             <input id="reminderSubject" name="reminderSubject" type="text"
                                                 class="form-control form-control-sm" required aria-required="true">
-                                            <div class="invalid-feedback">You must provide a subject for the reminder
-                                                email</div>
+                                            <div class="invalid-feedback">{{status_ui_92}}</div>
                                         </div>
                                     </div>
                                     <div class="form-group row mb-1">
                                         <div class="col">
-                                            <label for="reminderBody" class="col-form-label col-form-label-sm">Reminder
-                                                Body:</label>
+                                            <label for="reminderBody"
+                                                class="col-form-label col-form-label-sm">{{status_ui_93}}</label>
                                             <textarea id="reminderBody" name="reminderBody" type="text"
                                                 class="form-control form-control-sm richtext emailBody"></textarea>
-                                            <div class="invalid-feedback">You must provide a body for the reminder email
-                                            </div>
+                                            <div class="invalid-feedback">{{status_ui_94}}</div>
                                         </div>
                                     </div>
                                     <div class="form-group row mb-1">
                                         <div class="col text-right">
                                             <button class="btn btn-info btn-xs" type="button"
                                                 onclick="sag_module.previewEmail($('.reminderEmail'));"><i
-                                                    class="fa-eye fa-regular mr-1"></i>Preview</button>
+                                                    class="fa-eye fa-regular mr-1"></i>{{status_ui_83}}</button>
                                         </div>
                                     </div>
                                     <div class="form-group row" style="font-size: small;">
@@ -135,22 +129,20 @@
                                             <table aria-label="placeholders">
                                                 <thead>
                                                     <tr>
-                                                        <th colspan=2><span><strong>You can use the following
-                                                                    placeholders
-                                                                    to insert information into
-                                                                    your email subject and body:</strong></span></th>
+                                                        <th colspan=2><span><strong>{{status_ui_84}}</strong></span>
+                                                        </th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     {{PLACEHOLDERS}}
                                                 </tbody>
                                             </table>
-                                            <p><span>You can also use <button
+                                            <p><span>{{status_ui_85}} <button
                                                         class="btn btn-xs btn-rcgreen btn-rcgreen-light"
                                                         style="margin-left:3px;font-size:11px;padding:0 3px 1px;line-height:14px;"
                                                         onclick="smartVariableExplainPopup();setTimeout(function() {$('#smart_variable_explain_popup').parent().css('z-index', 1061);},300); return false;">[<i
                                                             class="fa-solid fa-bolt fa-xs" style="margin:0 1px;"></i>]
-                                                        Smart Variables</button></span></p>
+                                                        {{status_ui_86}}</button></span></p>
                                         </div>
                                     </div>
                                 </div>
@@ -161,9 +153,9 @@
             </div>
             <div class=" modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                    data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" onclick="sag_module.sendEmailAlerts();">Send
-                    Alerts</button>
+                    data-bs-dismiss="modal">{{cancel}}</button>
+                <button type="button" class="btn btn-primary"
+                    onclick="sag_module.sendEmailAlerts();">{{status_ui_95}}</button>
             </div>
         </div>
     </div>
